# ChangeLog for net-misc/dhcp
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.113 2006/09/03 10:44:46 uberlord Exp $

*dhcp-3.0.5_rc2 (03 Sep 2006)

  03 Sep 2006; Roy Marples <uberlord@gentoo.org>
  +dhcp-3.0.5_rc2.ebuild:
  Version bump.

  11 Aug 2006; Thomas Cort <tcort@gentoo.org> dhcp-3.0.3-r9.ebuild:
  Stable on alpha wrt Bug #137689.

*dhcp-3.0.5_beta1 (27 Jul 2006)

  27 Jul 2006; Roy Marples <uberlord@gentoo.org>
  files/dhcp-3.0.3-dhclient-hostname.patch, +dhcp-3.0.5_beta1.ebuild:
  Version bump and fix hostname patch slightly.
  
  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> dhcp-3.0.3-r9.ebuild:
  Marked stable on mips.

  02 Jul 2006; Chris White <chriswhite@gentoo.org> metadata.xml:
  Japanese metadata.xml translation.  Thanks to Yoshino-san in bug #134840.

*dhcp-3.0.4-r2 (28 Jun 2006)

  28 Jun 2006; Roy Marples <uberlord@gentoo.org>
  +files/dhcp-3.0.4-64bit.patch, +dhcp-3.0.4-r2.ebuild:
  Added patch to fix 64 bit DHCP servers, #133905.

  25 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org> dhcp-3.0.3-r9.ebuild:
  Marked stable on amd64. bug 137689.

  25 Jun 2006; Guy Martin <gmsoft@gentoo.org> dhcp-3.0.3-r9.ebuild:
  Stable on hppa.

  25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  dhcp-3.0.3-r9.ebuild:
  ppc stable, bug #137689

  23 Jun 2006; Markus Rothe <corsair@gentoo.org> dhcp-3.0.3-r9.ebuild:
  Stable on ppc64; bug #137689

  23 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> dhcp-3.0.3-r9.ebuild:
  Stable on x86 wrt bug #137689.

  23 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> dhcp-3.0.3-r9.ebuild:
  Stable on sparc wrt #137689

  09 Jun 2006; <roy@gentoo.org> -dhcp-3.0.4.ebuild, dhcp-3.0.3-r9.ebuild,
  dhcp-3.0.4-r1.ebuild:
  minimal USE flag stops the building of the DHCP server
  doc USE flag installs the documentation

*dhcp-3.0.3-r9 (23 May 2006)

  23 May 2006; Roy Marples <uberlord@gentoo.org>