@@ -93,14 +93,14 @@ EBUILD dhcp-3.0.4-r2.ebuild 7106 RMD160 97045530e54bc7d38d749abdb7a3183281b63adb
 MD5 d27d758e791ff94904a192f13dbdac7c dhcp-3.0.4-r2.ebuild 7106
 RMD160 97045530e54bc7d38d749abdb7a3183281b63adb dhcp-3.0.4-r2.ebuild 7106
 SHA256 0139e97c2821718924a06d4c22eeea0567a7d36cb35960acdf32d04974dd04c1 dhcp-3.0.4-r2.ebuild 7106
-EBUILD dhcp-3.0.5_rc2.ebuild 7030 RMD160 814370771efc7fdcf43976d3e9a03e54328d8571 SHA1 1b54f64e2181f27740aa1e8514e51d795fcec2ba SHA256 22b5b7578b85a3718a2749e77d43af16952c33e5267a0a60aef8c58efe47a1f3
-MD5 1ad1fb06f9c609b5425f06b3e7da216a dhcp-3.0.5_rc2.ebuild 7030
-RMD160 814370771efc7fdcf43976d3e9a03e54328d8571 dhcp-3.0.5_rc2.ebuild 7030
-SHA256 22b5b7578b85a3718a2749e77d43af16952c33e5267a0a60aef8c58efe47a1f3 dhcp-3.0.5_rc2.ebuild 7030
-MISC ChangeLog 19496 RMD160 b369a5a33318bbfe28c2c049753df4694f02ecaa SHA1 36e9b870964472323132f4ae5b419a1392ac349e SHA256 86c4140d09bbe671edda77a8f7ebc9b06f15421219bf3bd1c5e356ccbd1f7df8
-MD5 4553437e7380fb8750de7a21e4089fcc ChangeLog 19496
-RMD160 b369a5a33318bbfe28c2c049753df4694f02ecaa ChangeLog 19496
-SHA256 86c4140d09bbe671edda77a8f7ebc9b06f15421219bf3bd1c5e356ccbd1f7df8 ChangeLog 19496
+EBUILD dhcp-3.0.5_rc2.ebuild 7211 RMD160 a660a690ea9bb27626954b3cea41cb353a3f3f12 SHA1 a1cf43a1196e14cfc551a401546eb27dcf1b80c6 SHA256 d75b83c794b521b441136193cbbee7c04ba3f45b56f5fcb4aa27243f695cadcc
+MD5 b91b2513fcb93734312d5ddfe39eb088 dhcp-3.0.5_rc2.ebuild 7211
+RMD160 a660a690ea9bb27626954b3cea41cb353a3f3f12 dhcp-3.0.5_rc2.ebuild 7211
+SHA256 d75b83c794b521b441136193cbbee7c04ba3f45b56f5fcb4aa27243f695cadcc dhcp-3.0.5_rc2.ebuild 7211
+MISC ChangeLog 19617 RMD160 cfa115588e6c63404954ee22f848f8226086f933 SHA1 7bf1c0b042a02a33847a9ab510549aff154a8dd9 SHA256 cff821726304531771391bc5c713ef629b4d8ac17a2d0096f8c26307fb2e0d20
+MD5 245e358c44ce075c977b4c634151cfe8 ChangeLog 19617
+RMD160 cfa115588e6c63404954ee22f848f8226086f933 ChangeLog 19617
+SHA256 cff821726304531771391bc5c713ef629b4d8ac17a2d0096f8c26307fb2e0d20 ChangeLog 19617
 MISC metadata.xml 441 RMD160 489c700355a49fda7d249a7b3f72066add57e779 SHA1 f2013226d45685a4bd06c3f7723df78e134486d4 SHA256 16dccfd59e8db49b0c9b9bb34f99188f9773a2ef00757d4fb429fea4293ac44e
 MD5 3ccab43e194be4b8df2632546cbd028e metadata.xml 441
 RMD160 489c700355a49fda7d249a7b3f72066add57e779 metadata.xml 441
