@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/dhcp
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.113 2006/09/03 10:44:46 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.114 2006/09/05 16:08:29 uberlord Exp $
+
+  05 Sep 2006; Roy Marples <uberlord@gentoo.org> dhcp-3.0.5_rc2.ebuild:
+  dhcp requires CONFIG_PACKET to work in linux.
 
 *dhcp-3.0.5_rc2 (03 Sep 2006)
 
